--- a/data/configs/Hsapopi.yaml
+++ b/data/configs/Hsapopi.yaml
@@ -2,6 +2,7 @@
 name_dataset: 'Hsap_opistho'
 input_table_file: 'data/input_tables/Hsapopi.csv'
 species_tree: 'data/sptrees/homo.spTree.nw'
+species_tree_labels: 'data/sptrees/homo_internal.spTree.nw'
 taxons_file: 'data/meta/Hsap_taxon.csv'
 seed: ['UP000005640']
-
+root: 'Atha'
