--- a/data/configs/Ncraopi.yaml
+++ b/data/configs/Ncraopi.yaml
@@ -4,3 +4,4 @@ input_table_file: 'data/input_tables/Ncraopi.csv'
 species_tree: 'data/sptrees/neurospora.spTree.nw'
 taxons_file: 'data/meta/Ncra_taxon.csv'
 seed: ['UP000001805']
+root: 'Atha'
