added notebooks, FTPY and some code improvements

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ notebooks/prokaryote_sampling_cache/
 .Rproj.user
 logs/
 draft/
+resources/fastas/
+resources/structures/
+workflow/notebooks/*cache/
+workflow/notebooks/*files/
