--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,4 +1,7 @@
 # PARAMS
+
+# Download pipeline
+low_confidence: 40
 # minimum length of seed protein to keep
 min_len: 0
 
@@ -10,7 +13,6 @@ max_seqs_brh: 5
 eval_both: 1e-3
 coverage: 50
 eval_brh: 10
-
 
 # how many sequence max to do the tree?
 max_seqs: 150
@@ -29,8 +31,12 @@ distboot: 100
 # min_trim_len: 30
 
 # files and folders
-subst_matrix: 'data/subst_matrixes/mat3di.out'
-subst_matrix_tree: 'data/subst_matrixes/3DI.nexus'
-sequence_dir: 'data/fastas/'
-structure_dir: 'data/structures/'
+subst_matrix: 'resources/subst_matrixes/mat3di.out'
+subst_matrix_tree: 'resources/subst_matrixes/3DI.nexus'
+sequence_dir: 'results/data/fastas/'
+structure_dir: 'results/data/structures/'
+gff_dir: 'results/data/gffs/'
+
 outdir: 'results/'
+
+n_examples: 50
