--- a/config/Hsapopi_test.yaml
+++ b/config/Hsapopi_test.yaml
@@ -1,9 +1,9 @@
 # Input file
 dataset: 'test'
-input_table_file: 'data/input_tables/Hsapopi.csv'
-species_tree: 'data/sptrees/homo.spTree.nw'
-species_tree_labels: 'data/sptrees/homo_internal.spTree.nw'
-taxons_file: 'data/meta/Hsap_taxon.csv'
+taxids: 'data/input/Hsapopi_set.txt'
+species_tree: 'data/sptrees/homo_internal.spTree.nw'
+# species_tree_labels: 'data/sptrees/homo_internal.spTree.nw'
+# taxons_file: 'data/meta/Hsap_taxon.csv'
 seed: ['UP000005640']
 root: 'Atha'
 
