--- a/config/params.yaml
+++ b/config/params.yaml
@@ -5,6 +5,10 @@ low_confidence: 40
 # minimum length of seed protein to keep
 min_len: 0
 
+combinations: ["3Di_3Di", "aa_QT", "aa_LG", "3Di_GTR", "3Di_FT"]
+#, "3Di_FTPY"]
+
+
 # target per queries in both foldseek and blast
 target_seqs: 1000
 max_seqs_brh: 5
@@ -33,11 +37,8 @@ distboot: 100
 # files and folders
 subst_matrix: 'resources/subst_matrixes/mat3di.out'
 subst_matrix_tree: 'resources/subst_matrixes/3DI.nexus'
-sequence_dir: 'results/data/fastas/'
-structure_dir: 'results/data/structures/'
-gff_dir: 'results/data/gffs/'
-cath_dir: 'results/data/cath/'
 
+data_dir: 'results/data/'
 outdir: 'results/'
 
 n_examples: 50
