--- a/config/example_eggnog.yaml
+++ b/config/example_eggnog.yaml
@@ -1,10 +1,14 @@
 # Input file
-dataset: 'example'
+homology_dataset: 'bacteria_example'
+phylo_dataset: 'example_eggnog'
 taxids: 'data/input/Test_set.txt'
 species_tree: 'data/sptrees/Test.nwk'
 seed: ['UP000000625']
 root: 'ecoli'
 
 # this is the number of seed genes to run the pipeline
-test_seeds: 15
+test_seeds: 'data/seeds/example_eggnog.txt'
+modes: ['common']
+
+foldmason_set: 'common'
 n_examples: 3
