--- a/config/params.yaml
+++ b/config/params.yaml
@@ -6,10 +6,9 @@ low_confidence: 40
 min_len: 0
 
 # possible methodological combination. You can exclude whichever
-combinations: ["3Di_3Di", "aa_QT", "aa_LG", "3Di_GTR", "3Di_FT", "3Di_LLM", "3Di_AF"]
+combinations: ["3Di_3Di", "aa_FM", "aa_LG", "3Di_GTR", "3Di_FT", "comb_part", "3Di_LLM", "3Di_AF"] #, "3Di_FTPY"]
 # Subset of the first one that requires ML 
-combinations_ML: ["3Di_3Di", "aa_LG", "3Di_GTR", "3Di_LLM", "3Di_AF"]
-#, "3Di_FTPY"]
+combinations_ML: ["3Di_3Di", "aa_LG", "3Di_GTR", "comb_part", "3Di_LLM", "3Di_AF"]
 
 # Target sets, you can exclude whichever to reduce computations
 modes: ['blast', 'fs', 'common', 'union']
@@ -42,10 +41,11 @@ UF_boot: 1000
 distboot: 100
 
 # files and folders
-subst_matrix: 'resources/subst_matrixes/mat3di.out'
-subst_matrix_3di: 'resources/subst_matrixes/3DI.nexus'
-subst_matrix_LLM: 'resources/subst_matrixes/Q_mat_LLM_Garg.txt'
-subst_matrix_AF: 'resources/subst_matrixes/Q_mat_AF_Garg.txt'
+subst_matrix: 
+  aln: 'resources/subst_matrixes/mat3di.out'
+  3di: 'resources/subst_matrixes/3DI.nexus'
+  LLM: 'resources/subst_matrixes/Q_mat_LLM_Garg.txt'
+  AF: 'resources/subst_matrixes/Q_mat_AF_Garg.txt'
 
 data_dir: 'results/data/'
 outdir: 'results/'
