--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -13,9 +13,9 @@ if dataset_config_file is not None:
     # Load dataset-specific parameters
     configfile: dataset_config_file
 
-include: 'rules/prepare.smk'
-include: 'rules/structure.smk'
-include: 'rules/sequence.smk'
+# include: 'rules/prepare.smk'
+# include: 'rules/structure.smk'
+# include: 'rules/sequence.smk'
 include: 'rules/checks.smk'
 include: 'rules/common.smk'
 include: 'rules/analysis.smk'
@@ -27,23 +27,19 @@ input_dict = input_table.set_index('uniprot').T.to_dict()
 
 codes = list(input_table['uniprot'])
 
-outdir=config['outdir']+config['dataset']
+homodir=config['outdir']+'homology/'+config['homology_dataset']
+outdir=config['outdir']+'phylogeny/'+config['phylo_dataset']
 
 # possible combinations:
 combinations_codes_str=[x+"_"+y for x in codes for y in codes]
 
-plots = ["homology", "saturation", "runtime", "astral_pro", "trees", "discordance", "singletons", "distance", "examples"]
+# for the plots you need to work a bit on adapting to new nonphylome method
+plots = ["discordance"] # "runtime", "astral_pro", "trees", "discordance", "examples", "distance"
 
 rule all:
     input:
-        # expand(outdir+"/homology/{seed}_blast_brh.tsv", seed=config['seed']),
-        # expand(outdir+"/homology/{seed}_fs_brh.tsv", seed=config['seed']),
-        outdir+'/db/db_num.tsv',
-        expand(outdir+"/reco/disco/{seed}_{mode}_{comb}_disco_output.nwk", 
-            seed=config["seed"], mode=config["modes"], comb=config["combinations"]),
         expand(outdir+"/plots/{seed}_{plot}.pdf", seed=config['seed'], plot=plots),
-        expand(outdir+"/plots/{seed}_foldmason", seed=config['seed']),
-        expand(outdir+"/reco/{seed}_notung.tsv", seed=config['seed']),
-        expand(config['data_dir']+'cath/{code}_cath.tsv', code=codes),
-        expand(config['data_dir']+'ids/{code}_ids.tsv', code=codes),
+        expand(outdir+"/plots/{seed}_foldmason", seed=config['seed'])
+        # expand(outdir+"/reco/{seed}_notung.tsv", seed=config['seed']),
+        # expand(outdir+"/trees/{seed}_mltrees.txt", seed=config['seed'])
 
