--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -39,7 +39,8 @@ plots = ["discordance"] # "runtime", "astral_pro", "trees", "discordance", "exam
 rule all:
     input:
         expand(outdir+"/plots/{seed}_{plot}.pdf", seed=config['seed'], plot=plots),
-        expand(outdir+"/plots/{seed}_foldmason", seed=config['seed'])
+        expand(outdir+"/plots/{seed}_foldmason", seed=config['seed']),
+        expand(outdir+"/trees/{seed}_{mode}_trees.txt", seed=config['seed'], mode=config["modes"])
         # expand(outdir+"/reco/{seed}_notung.tsv", seed=config['seed']),
         # expand(outdir+"/trees/{seed}_mltrees.txt", seed=config['seed'])
 
