added foldtree benchmark

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ data/meta/*gz
 notebooks/prokaryote_sampling_cache/
 .Rproj.user
 logs/
-draft/
+draft/foldtree_benchmark/zenodo/
+draft/foldtree_benchmark/fold_tree_t/
 resources/fastas/
 resources/structures/
 workflow/notebooks/*cache/
