--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ workflow/notebooks/*cache/
 workflow/notebooks/*files/
 workflow/notebooks/prokaryote_sampling*
 workflow/notebooks/*html
+JASSY/
+JASSY_structs/
