--- a/workflow/envs/sp_python.yaml
+++ b/workflow/envs/sp_python.yaml
@@ -16,3 +16,10 @@ dependencies:
   - csvtk
   - seqkit
   - foldseek
+  - pip:
+    - tqdm
+    - wget
+    - numpy
+    - statsmodels
+    - toyplot
+    - requests
